--- a/forms.html
+++ b/forms.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-        crossorigin="anonymous"></script>
-    <link href="forms.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="forms.js"></script>
-    <script src="forms.json"></script>
-    <title>A fantastical adventure</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Delani Studios</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="css/style.css" rel="stylesheet">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
     <div class="container">
-        <h1>Fill in the blanks to write your story!</h1>
-        <div id="blanks">
-            <form>
-                <div class="form-group">
-                    <label for="person1">A name</label>
-                    <input id="person1" class="form-control" type="text">
+        <div class="section1">
+            <div class="row">
+                <div class="first-text jumbotron">
+                    <p><BR><BR><BR></p>
+                    <img src="assets/Delani Studio.jpg">
+                    <p>
+                        <bold><BR><BR><BR>WELCOME<BR> TO DELANI STUDIOS</bold>
+                    </p>
+                    <h4>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT<br><br><br></h4>
+                    <img src="assets/mouse_click.png">
                 </div>
-                <div class="form-group">
-                    <label for="person2">Another name</label>
-                    <input id="person2" class="form-control" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="animal">An animal</label>
-                    <input id="animal" class="form-control" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="exclamation">An exclamation</label>
-                    <input id="exclamation" class="form-control" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="verb">A past tense verb</label>
-                    <input id="verb" class="form-control" type="text">
-                </div>
-                <div class="form-group">
-                    <label for="noun">A noun</label>
-                    <input id="noun" class="form-control" type="text">
-                </div>
-                <button type="submit" class="btn">Show me the story!</button>
-            </form>
+            </div>
         </div>
-        <div id="story">
-            <h1>A fantastical adventure</h1>
-            <p>One day, <span class="person1"></span> and <span class="person2"></span> were walking through the woods,
-                when suddenly a giant <span class="animal"></span> appeared. "<span class="exclamation"></span>", <span
-                    class="person1"></span> cried. The two of them <span class="verb"></span> as quickly possible, and
-                when they were safe, <span class="person1"></span> and <span class="person2"></span> gave each other a
-                giant <span class="noun"></span>.
-            </p>
+        <div class="section2">
+            <div class="row">
+                <div class="second-text">
+                    <p>ABOUT US</p><BR>
+                    <p>When you work with us, you are part of a team of committed collaborators.<br>All aspects of our
+                        software development process are integrated, iterative and agile.</p>
+                    <p>Our approach unifies design, development and<br> project management to create exceptional
+                        products. <br>We start each project by understanding our business goals, <br>the user's needs
+                        and the products requirements.<br>Then we help translate them into effective and elegant
+                        solutions</p>
+                </div>
+            </div>
+        </div>
+        <div class="section3">
+            <br><br><br>
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="third-text">
+                    <p>Before We sign a contract or write a line of code, our team will spend the necessary <br> time
+                        needed to understand our product vision.<br>The outcome of this scoping session is a proposal or
+                        high-level statement of work.<br>Based on your requirements, we can provide a complete offering
+                        or just the pieces<br>you need. </p>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+        <div class="section4">
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="fourth-text">
+                        <h1>WHAT WE DO</h1>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-4"></div>
+                <div class="col-md-4"></div>
+            </div>
         </div>
     </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
