--- a/forms.html
+++ b/forms.html
@@ -26,12 +26,12 @@
             <div class="row">
                 <div class="first-text jumbotron">
                     <p><BR><BR><BR></p>
-                    <img src="css/assets/logo.png">
+                    <img src="assets/logo.png">
                     <p>
                         <bold><BR><BR><BR>WELCOME<BR> TO DELANI STUDIOS</bold>
                     </p>
                     <h4>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT<br><br><br></h4>
-                    <img src="css/assets/mouse_click.png">
+                    <img src="assets/mouse_click.png">
                 </div>
             </div>
         </div>
